<resources>
    <string name="app_name">Lab8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OrdenarZA">Ordenar de Z a A</string>
    <string name="ordenarAZ">Ordenar de A a Z</string>
    <string name="texto_ejemplo">TextoEjemplo</string>
    <string name="species">Species:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="episode_appearences">Episode Appearences</string>
    <string name="ingresa_contrasena">Ingresa tu contraseña</string>
    <string name="ingresa_correo">Ingresa tu correo</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="correo">mor21146@uvg.edu.gt</string>
    <string name="cerrar_seión">Cerrar sesión</string>
    <string name="cerrar_sesión">Cerrar sesión</string>
</resources>