<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CharacterDetailFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nombre_personaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/texto_ejemplo"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/especie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/species"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/nombre_personaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_personaje" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/status"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/especie"
        app:layout_constraintStart_toStartOf="@+id/especie"
        app:layout_constraintTop_toBottomOf="@+id/especie" />

    <TextView
        android:id="@+id/genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/gender"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/status"
        app:layout_constraintStart_toStartOf="@+id/status"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/gender_personaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/texto_ejemplo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/nombre_personaje"
        app:layout_constraintTop_toBottomOf="@+id/nombre_personaje" />

    <TextView
        android:id="@+id/status_personaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/texto_ejemplo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/gender_personaje"
        app:layout_constraintStart_toStartOf="@+id/gender_personaje"
        app:layout_constraintTop_toBottomOf="@+id/gender_personaje" />

    <TextView
        android:id="@+id/genero_personaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/texto_ejemplo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/status_personaje"
        app:layout_constraintStart_toStartOf="@+id/status_personaje"
        app:layout_constraintTop_toBottomOf="@+id/status_personaje" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/origin"
        app:layout_constraintEnd_toEndOf="@+id/genero"
        app:layout_constraintStart_toStartOf="@+id/genero"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

    <TextView
        android:id="@+id/origen_personaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/texto_ejemplo"
        app:layout_constraintEnd_toEndOf="@+id/genero_personaje"
        app:layout_constraintStart_toStartOf="@+id/genero_personaje"
        app:layout_constraintTop_toBottomOf="@+id/genero_personaje" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/episode_appearences"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/apariciones_personaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:text="@string/texto_ejemplo"
        app:layout_constraintEnd_toEndOf="@+id/origen_personaje"
        app:layout_constraintStart_toStartOf="@+id/origen_personaje"
        app:layout_constraintTop_toBottomOf="@+id/origen_personaje" />
</androidx.constraintlayout.widget.ConstraintLayout>